--- a/graph/jupyter/convert_to_db.ipynb
+++ b/graph/jupyter/convert_to_db.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T05:14:38.414766Z",
-     "start_time": "2025-10-11T05:14:38.411297Z"
+     "end_time": "2025-10-16T09:00:08.528856Z",
+     "start_time": "2025-10-16T09:00:08.513278Z"
     }
    },
    "cell_type": "code",
@@ -35,7 +35,7 @@
    ],
    "id": "6eb0abfe767f30c1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -80,8 +80,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T05:14:48.846741Z",
-     "start_time": "2025-10-11T05:14:48.694117Z"
+     "end_time": "2025-10-16T09:00:13.415551Z",
+     "start_time": "2025-10-16T09:00:13.136676Z"
     }
    },
    "cell_type": "code",
@@ -112,20 +112,11 @@
     "                        output_text.append(text)\n",
     "    return output_text\n",
     "\n",
-    "def extract_so_hieu(text_list):\n",
-    "    pattern = r\"\\d{1,3}/\\d{4}/[A-ZĐ0-9\\-]+\"\n",
-    "    for text in text_list:\n",
-    "        match = re.search(pattern, text)\n",
-    "        if match:\n",
-    "            return match.group(0)\n",
-    "    return None\n",
-    "\n",
     "def extract_law_reference_info(text_lines):\n",
     "    \"\"\"\n",
     "    Xử lý danh sách các dòng văn bản để trích xuất số hiệu, tựa đề và toàn bộ\n",
     "    nội dung phần mở đầu (sau \"Căn cứ...\").\n",
     "    \"\"\"\n",
-    "    so_hieu_pattern = re.compile(r'(\\d{1,3}/\\d{4}/QH\\d+)')\n",
     "    date_pattern = re.compile(r'.*ngày\\s+\\d{1,2}\\s+tháng\\s+\\d{1,2}\\s+năm\\s+\\d{4}')\n",
     "\n",
     "    tu_khoa_loai_bo = (\n",
@@ -164,9 +155,10 @@
     "                continue\n",
     "\n",
     "            # --- Lọc và thu thập tựa đề (nếu chưa đến phần nội dung) ---\n",
-    "            match_sh = so_hieu_pattern.search(sub_line)\n",
+    "            match_sh = re.search(r'Số:\\s*(.+)', line)  # lấy toàn bộ phần sau \"Số:\"\n",
     "            if match_sh:\n",
     "                so_hieu = match_sh.group(1)\n",
+    "                so_hieu = so_hieu.replace(' ', '')\n",
     "                continue\n",
     "\n",
     "            if sub_line.startswith(tu_khoa_loai_bo) or date_pattern.match(sub_line):\n",
@@ -341,7 +333,7 @@
    ],
    "id": "427a6f7aa15b325",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -363,8 +355,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T05:15:25.534048Z",
-     "start_time": "2025-10-11T05:15:21.992513Z"
+     "end_time": "2025-10-16T09:00:22.228723Z",
+     "start_time": "2025-10-16T09:00:21.827902Z"
     }
    },
    "cell_type": "code",
@@ -376,8 +368,25 @@
     "parse_document(output_text, cursor, conn)"
    ],
    "id": "c41854a3a7173312",
-   "outputs": [],
-   "execution_count": 6
+   "outputs": [
+    {
+     "ename": "PackageNotFoundError",
+     "evalue": "Package not found at './data/Bộ luật-92-2015-QH13.docx'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mPackageNotFoundError\u001B[39m                      Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[3]\u001B[39m\u001B[32m, line 4\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m# \"Luật-46-2014-QH13.docx\" còn nhiều ngoại lệ\u001B[39;00m\n\u001B[32m      2\u001B[39m doc_path = \u001B[33mr\u001B[39m\u001B[33m\"\u001B[39m\u001B[33m./data/Bộ luật-92-2015-QH13.docx\u001B[39m\u001B[33m\"\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m4\u001B[39m output_text = \u001B[43mextract_text_from_docx\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m      5\u001B[39m parse_document(output_text, cursor, conn)\n",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[2]\u001B[39m\u001B[32m, line 10\u001B[39m, in \u001B[36mextract_text_from_docx\u001B[39m\u001B[34m(doc_path)\u001B[39m\n\u001B[32m      9\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mextract_text_from_docx\u001B[39m(doc_path):\n\u001B[32m---> \u001B[39m\u001B[32m10\u001B[39m     doc = \u001B[43mDocument\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdoc_path\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     11\u001B[39m     output_text = []\n\u001B[32m     12\u001B[39m     \u001B[38;5;28;01mfor\u001B[39;00m child \u001B[38;5;129;01min\u001B[39;00m doc.element.body.iterchildren():\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Github\\LawAssistant\\.venv\\Lib\\site-packages\\docx\\api.py:27\u001B[39m, in \u001B[36mDocument\u001B[39m\u001B[34m(docx)\u001B[39m\n\u001B[32m     20\u001B[39m \u001B[38;5;250m\u001B[39m\u001B[33;03m\"\"\"Return a |Document| object loaded from `docx`, where `docx` can be either a path\u001B[39;00m\n\u001B[32m     21\u001B[39m \u001B[33;03mto a ``.docx`` file (a string) or a file-like object.\u001B[39;00m\n\u001B[32m     22\u001B[39m \n\u001B[32m     23\u001B[39m \u001B[33;03mIf `docx` is missing or ``None``, the built-in default document \"template\" is\u001B[39;00m\n\u001B[32m     24\u001B[39m \u001B[33;03mloaded.\u001B[39;00m\n\u001B[32m     25\u001B[39m \u001B[33;03m\"\"\"\u001B[39;00m\n\u001B[32m     26\u001B[39m docx = _default_docx_path() \u001B[38;5;28;01mif\u001B[39;00m docx \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;28;01melse\u001B[39;00m docx\n\u001B[32m---> \u001B[39m\u001B[32m27\u001B[39m document_part = cast(\u001B[33m\"\u001B[39m\u001B[33mDocumentPart\u001B[39m\u001B[33m\"\u001B[39m, \u001B[43mPackage\u001B[49m\u001B[43m.\u001B[49m\u001B[43mopen\u001B[49m\u001B[43m(\u001B[49m\u001B[43mdocx\u001B[49m\u001B[43m)\u001B[49m.main_document_part)\n\u001B[32m     28\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m document_part.content_type != CT.WML_DOCUMENT_MAIN:\n\u001B[32m     29\u001B[39m     tmpl = \u001B[33m\"\u001B[39m\u001B[33mfile \u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m'\u001B[39m\u001B[33m is not a Word file, content type is \u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m'\u001B[39m\u001B[33m\"\u001B[39m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Github\\LawAssistant\\.venv\\Lib\\site-packages\\docx\\opc\\package.py:126\u001B[39m, in \u001B[36mOpcPackage.open\u001B[39m\u001B[34m(cls, pkg_file)\u001B[39m\n\u001B[32m    123\u001B[39m \u001B[38;5;129m@classmethod\u001B[39m\n\u001B[32m    124\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mopen\u001B[39m(\u001B[38;5;28mcls\u001B[39m, pkg_file: \u001B[38;5;28mstr\u001B[39m | IO[\u001B[38;5;28mbytes\u001B[39m]) -> Self:\n\u001B[32m    125\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"Return an |OpcPackage| instance loaded with the contents of `pkg_file`.\"\"\"\u001B[39;00m\n\u001B[32m--> \u001B[39m\u001B[32m126\u001B[39m     pkg_reader = \u001B[43mPackageReader\u001B[49m\u001B[43m.\u001B[49m\u001B[43mfrom_file\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpkg_file\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m    127\u001B[39m     package = \u001B[38;5;28mcls\u001B[39m()\n\u001B[32m    128\u001B[39m     Unmarshaller.unmarshal(pkg_reader, package, PartFactory)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Github\\LawAssistant\\.venv\\Lib\\site-packages\\docx\\opc\\pkgreader.py:22\u001B[39m, in \u001B[36mPackageReader.from_file\u001B[39m\u001B[34m(pkg_file)\u001B[39m\n\u001B[32m     19\u001B[39m \u001B[38;5;129m@staticmethod\u001B[39m\n\u001B[32m     20\u001B[39m \u001B[38;5;28;01mdef\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34mfrom_file\u001B[39m(pkg_file):\n\u001B[32m     21\u001B[39m \u001B[38;5;250m    \u001B[39m\u001B[33;03m\"\"\"Return a |PackageReader| instance loaded with contents of `pkg_file`.\"\"\"\u001B[39;00m\n\u001B[32m---> \u001B[39m\u001B[32m22\u001B[39m     phys_reader = \u001B[43mPhysPkgReader\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpkg_file\u001B[49m\u001B[43m)\u001B[49m\n\u001B[32m     23\u001B[39m     content_types = _ContentTypeMap.from_xml(phys_reader.content_types_xml)\n\u001B[32m     24\u001B[39m     pkg_srels = PackageReader._srels_for(phys_reader, PACKAGE_URI)\n",
+      "\u001B[36mFile \u001B[39m\u001B[32mE:\\Github\\LawAssistant\\.venv\\Lib\\site-packages\\docx\\opc\\phys_pkg.py:21\u001B[39m, in \u001B[36mPhysPkgReader.__new__\u001B[39m\u001B[34m(cls, pkg_file)\u001B[39m\n\u001B[32m     19\u001B[39m         reader_cls = _ZipPkgReader\n\u001B[32m     20\u001B[39m     \u001B[38;5;28;01melse\u001B[39;00m:\n\u001B[32m---> \u001B[39m\u001B[32m21\u001B[39m         \u001B[38;5;28;01mraise\u001B[39;00m PackageNotFoundError(\u001B[33m\"\u001B[39m\u001B[33mPackage not found at \u001B[39m\u001B[33m'\u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[33m'\u001B[39m\u001B[33m\"\u001B[39m % pkg_file)\n\u001B[32m     22\u001B[39m \u001B[38;5;28;01melse\u001B[39;00m:  \u001B[38;5;66;03m# assume it's a stream and pass it to Zip reader to sort out\u001B[39;00m\n\u001B[32m     23\u001B[39m     reader_cls = _ZipPkgReader\n",
+      "\u001B[31mPackageNotFoundError\u001B[39m: Package not found at './data/Bộ luật-92-2015-QH13.docx'"
+     ]
+    }
+   ],
+   "execution_count": 3
   }
  ],
  "metadata": {
