--- a/graph/jupyter/triplet_extraction_partLLM.ipynb
+++ b/graph/jupyter/triplet_extraction_partLLM.ipynb
@@ -6,14 +6,13 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-11T06:46:09.013100Z",
-     "start_time": "2025-10-11T06:46:09.007177Z"
+     "end_time": "2025-10-13T16:45:06.799022Z",
+     "start_time": "2025-10-13T16:45:06.791112Z"
     }
    },
    "source": [
     "import random\n",
     "import sqlite3\n",
-    "import re\n",
     "\n",
     "def extract_from_db(cursor, id: int, include_parent=False):\n",
     "    cursor.execute(\"SELECT * FROM laws WHERE id = ?\", (id,))\n",
@@ -69,8 +68,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T06:46:12.618603Z",
-     "start_time": "2025-10-11T06:46:11.918905Z"
+     "end_time": "2025-10-15T15:47:27.241693Z",
+     "start_time": "2025-10-15T15:47:26.373403Z"
     }
    },
    "cell_type": "code",
@@ -97,13 +96,13 @@
    ],
    "id": "cb0a0a46bc4ce861",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T06:46:14.842782Z",
-     "start_time": "2025-10-11T06:46:14.837355Z"
+     "end_time": "2025-10-13T16:23:58.541841Z",
+     "start_time": "2025-10-13T16:23:58.538942Z"
     }
    },
    "cell_type": "code",
@@ -874,8 +873,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T06:47:11.100332Z",
-     "start_time": "2025-10-11T06:46:58.129598Z"
+     "end_time": "2025-10-13T16:25:11.243946Z",
+     "start_time": "2025-10-13T16:24:59.325482Z"
     }
    },
    "cell_type": "code",
@@ -884,12 +883,12 @@
     "    import py_vncorenlp\n",
     "    rdrsegmenter = py_vncorenlp.VnCoreNLP(\n",
     "        annotators=[\"wseg\", \"pos\",\"ner\",\"parse\"],\n",
-    "        save_dir=r\"E:\\Github\\LawAssistant\\triplet_extraction\\VnCoreNLP-1.2\"\n",
+    "        save_dir=r\"E:\\Github\\uit_chatbot\\graph\\VnCoreNLP-1.2\"\n",
     "    )"
    ],
    "id": "caf5ec05f64536c2",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -966,8 +965,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-11T01:21:41.070452Z",
-     "start_time": "2025-10-11T01:21:37.837531Z"
+     "end_time": "2025-10-13T16:49:47.639112Z",
+     "start_time": "2025-10-13T16:49:47.474259Z"
     }
    },
    "cell_type": "code",
@@ -982,7 +981,7 @@
    ],
    "id": "8a847a0a87f74288",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 2
   },
   {
    "metadata": {
